# HUST-AST

./: .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh  实验报告U202215423汤婧羽.docx  操作手册.md
sample/: s0.txt  s1.txt
src/: format.cpp  format.h  gettoken.cpp  gettoken.h  lexicalAnalyse.cpp  lexicalAnalyse.h  main.cpp  output.c  syntaxAnalyse.cpp  syntaxAnalyse.h  syntax_analyse.cpp  syntax_analyse.h  wordAnalyse.cpp  wordAnalyse.h  word_analyse.cpp  word_analyse.h
